--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             padding: 10px;
             overflow: scroll;
             flex-wrap: wrap;
+            overflow-x: hidden;
         }
         .grp{
             font-size: 25px;
